--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Propriedades</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>YOU KNOW HOW I FEEL</h1>
+    <h1 class="font">YOU KNOW HOW I FEEL</h1>
+    <h2 class="box">IM FEELING GOOD</h2>
 </body>
 
 </html>
