--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
 </head>
 
 <body>
-    <h1 class="font">YOU KNOW HOW I FEEL</h1>
-    <h2 class="box">IM FEELING GOOD</h2>
+    <div class="center">
+        <div>
+            <h1 class="font">YOU KNOW HOW I FEEL</h1>
+
+        </div>
+        <h2 class="box">IM FEELING GOOD</h2>
+
+    </div>
 </body>
 
 </html>
