--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="fundoImagem sombra scroll">
     <div class="center">
         <div>
             <h1 class="font">YOU KNOW HOW I FEEL</h1>
 
         </div>
-        <h2 class="box">IM FEELING GOOD</h2>
+        <h2 class="box ">IM FEELING GOOD</h2>
 
     </div>
+    <h3 class="position">ITS A NEW DOWN ITS A NEW DAY</h3>
 </body>
 
 </html>
