--- a/Prática/index.html
+++ b/Prática/index.html
@@ -70,7 +70,7 @@
 
         <div class="sobre">
             <h1>Quem Somos</h1>
-            <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+            <p>Somos um restaurante.</p>
             <h3> <i class="fas fa-map-marker-alt local "></i>Local: Jaraguá Do Sul </h3>
             <h3> <i class="fas fa-clock"></i>Horário que estamos abertos</h3>
             <table border="1">
