--- a/Prática/index.html
+++ b/Prática/index.html
@@ -38,28 +38,28 @@
 
         <div class="container-pratos">
             <div class="prato">
-                <h3>Prato do Dia 1</h3>
+                <h3>Macarrão</h3>
                 <p>20R$</p>
                 <img src="https://img.freepik.com/vetores-gratis/ilustracao-de-desenho-animado-de-comida-desenhada-a-mao_23-2150695326.jpg?semt=ais_hybrid&w=740"
                     alt="Prato 1">
                 <button>Pedir Agora</button>
             </div>
             <div class="prato">
-                <h3>Prato do Dia 2</h3>
+                <h3>Estrogonofe</h3>
                 <p>20R$</p>
-                <img src="https://img.freepik.com/vetores-gratis/ilustracao-de-desenho-animado-de-comida-desenhada-a-mao_23-2150695326.jpg?semt=ais_hybrid&w=740"
+                <img src="https://media.istockphoto.com/id/1284307013/pt/vetorial/beef-stroganoff-icon-on-transparent-background.jpg?s=612x612&w=0&k=20&c=gqrShdYeys2A5wAD3Nf3VddNA4Z0Iq9FNnK9E-y60-I="
                     alt="Prato 2">
                 <button>Pedir Agora</button>
             </div>
             <div class="prato">
-                <h3>Prato do Dia 3</h3>
+                <h3>Lasanha</h3>
                 <p>20R$</p>
-                <img src="https://img.freepik.com/vetores-gratis/ilustracao-de-desenho-animado-de-comida-desenhada-a-mao_23-2150695326.jpg?semt=ais_hybrid&w=740"
+                <img src="https://media.istockphoto.com/id/1421285293/pt/vetorial/lasagne-italian-food-glass-plate-with-meal-of-layers-of-pasta-mozzarella-and-ragu.jpg?s=612x612&w=0&k=20&c=7_yhDVCktbYWvgbzLg63RIwQcYx49vRYJoP9Z79Huv0="
                     alt="Prato 3">
                 <button>Pedir Agora</button>
             </div>
             <div class="prato">
-                <h3>Prato do Dia 4</h3>
+                <h3>Feijoada</h3>
                 <p>R$20</p>
                 <img src="https://img.freepik.com/vetores-gratis/ilustracao-de-desenho-animado-de-comida-desenhada-a-mao_23-2150695326.jpg?semt=ais_hybrid&w=740"
                     alt="Prato 4">
