--- a/Prática/index.html
+++ b/Prática/index.html
@@ -61,7 +61,7 @@
             <div class="prato">
                 <h3>Feijoada</h3>
                 <p>R$20</p>
-                <img src="https://img.freepik.com/vetores-gratis/ilustracao-de-desenho-animado-de-comida-desenhada-a-mao_23-2150695326.jpg?semt=ais_hybrid&w=740"
+                <img src="https://img.freepik.com/vetores-gratis/ilustracao-desenhada-a-mao-feijoada_23-2148798466.jpg"
                     alt="Prato 4">
                 <button>Pedir Agora</button>
             </div>
