--- a/Prática/index.html
+++ b/Prática/index.html
@@ -21,60 +21,74 @@
 
     <div class="card">
         <div class="title">
-            <h1>Rango - Rápido<i class="fas fa-fire" style="color: orange;"></i></h1>
+            <h1 style="font-size: 48px;">Rango - Rápido<i class="fas fa-fire" style="color: orange;"></i></h1>
         </div>
 
         <div>
             <nav>
                 <ul>
-                    <li><a href="#">Sobre nós</a></li>
-                    <li><a href="#">Pratos</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="#sobrenos">Sobre nós</a></li>
+                    <li><a href="#pratos">Pratos</a></li>
+                    <li><a href="#contato">Contato</a></li>
 
                 </ul>
             </nav>
 
         </div>
-
-        <div class="container-pratos">
+        <div class="container-pratos" id="pratos">
             <div class="prato">
-                <h3>Macarrão</h3>
+                <h3 style="font-size: 45px;">Macarrão</h3>
                 <p>20R$</p>
-                <img src="https://img.freepik.com/vetores-gratis/ilustracao-de-desenho-animado-de-comida-desenhada-a-mao_23-2150695326.jpg?semt=ais_hybrid&w=740"
+                <img src="https://img.freepik.com/vetores-premium/icone-de-vetor-de-desenho-animado-de-macarrao-espaguete_606715-7.jpg"
                     alt="Prato 1">
-                <button>Pedir Agora</button>
             </div>
             <div class="prato">
-                <h3>Estrogonofe</h3>
+                <h3 style="font-size: 45px;">Estrogonofe</h3>
                 <p>20R$</p>
                 <img src="https://media.istockphoto.com/id/1284307013/pt/vetorial/beef-stroganoff-icon-on-transparent-background.jpg?s=612x612&w=0&k=20&c=gqrShdYeys2A5wAD3Nf3VddNA4Z0Iq9FNnK9E-y60-I="
                     alt="Prato 2">
-                <button>Pedir Agora</button>
             </div>
             <div class="prato">
-                <h3>Lasanha</h3>
+                <h3 style="font-size: 45px;">Lasanha</h3>
                 <p>20R$</p>
                 <img src="https://media.istockphoto.com/id/1421285293/pt/vetorial/lasagne-italian-food-glass-plate-with-meal-of-layers-of-pasta-mozzarella-and-ragu.jpg?s=612x612&w=0&k=20&c=7_yhDVCktbYWvgbzLg63RIwQcYx49vRYJoP9Z79Huv0="
                     alt="Prato 3">
-                <button>Pedir Agora</button>
             </div>
             <div class="prato">
-                <h3>Feijoada</h3>
+                <h3 style="font-size: 45px;">Arroz Carreteiro</h3>
                 <p>R$20</p>
-                <img src="https://img.freepik.com/vetores-gratis/ilustracao-desenhada-a-mao-feijoada_23-2148798466.jpg"
+                <img src="https://img.freepik.com/vetores-premium/pilaf-delicioso-com-carne-isolado-em-ilustracao-vetorial-de-desenho-animado-branco_1310786-82590.jpg?semt=ais_hybrid&w=740"
                     alt="Prato 4">
-                <button>Pedir Agora</button>
+            </div>
+            <div class="prato">
+                <h3 style="font-size: 45px;">Arroz Carreteiro</h3>
+                <p>R$20</p>
+                <img src="https://img.freepik.com/vetores-premium/pilaf-delicioso-com-carne-isolado-em-ilustracao-vetorial-de-desenho-animado-branco_1310786-82590.jpg?semt=ais_hybrid&w=740"
+                    alt="Prato 4">
+            </div>
+            <div class="prato">
+                <h3 style="font-size: 45px;">Arroz Carreteiro</h3>
+                <p>R$20</p>
+                <img src="https://img.freepik.com/vetores-premium/pilaf-delicioso-com-carne-isolado-em-ilustracao-vetorial-de-desenho-animado-branco_1310786-82590.jpg?semt=ais_hybrid&w=740"
+                    alt="Prato 4">
+
+            </div>
+            <div class="prato">
+                <h3 style="font-size: 45px;">Feijoada</h3>
+                <p>R$20</p>
+                <img src="img/feijoada.png" alt="Prato 4">
             </div>
         </div>
 
 
-        <div class="sobre">
-            <h1>Quem Somos</h1>
-            <p>Somos um restaurante.</p>
+        <div class="sobre" id="sobrenos">
+            <h1>Sobre nós</h1>
+            <p style="font-size: 25px;">Somos a sua primeira opção quando quiser um almoço ou janta típico brasileiro em
+                minutos.</p>
+            <h2>Somos O rango Rápido!</h2>
             <h3> <i class="fas fa-map-marker-alt local "></i>Local: Jaraguá Do Sul </h3>
             <h3> <i class="fas fa-clock"></i>Horário que estamos abertos</h3>
             <table border="1">
-                <caption>Horário de Funcionamento</caption>
                 <thead>
                     <tr>
                         <th>Dia da semana</th>
@@ -117,7 +131,7 @@
 
         </div>
 
-        <div class="footer">
+        <div class="footer" id="contato">
             <h1>Contatos</h1>
             <a href="URL_DO_SEU_INSTAGRAM" target="_blank" class="instagram-link">
                 <i class="fab fa-instagram"></i>
